Fix scrollbar so its not always visible on page itself, just popup

--- a/client/src/css/popup.css
+++ b/client/src/css/popup.css
@@ -1,23 +1,23 @@
-::-webkit-scrollbar {
+.box::-webkit-scrollbar {
   -webkit-appearance: none;
 }
 
-::-webkit-scrollbar:vertical {
+.box::-webkit-scrollbar:vertical {
   width: 12px;
 }
 
-::-webkit-scrollbar:horizontal {
+.box::-webkit-scrollbar:horizontal {
   height: 12px;
 }
 
-::-webkit-scrollbar-thumb {
+.box::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.5);
   border: 4px solid transparent;
   border-radius: 9px;
   background-clip: content-box;
 }
 
-::-webkit-scrollbar-track {
+.box::-webkit-scrollbar-track {
   border-radius: 10px;
 }
 
